--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M2BPL7MQEB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-M2BPL7MQEB');
+  </script>
+
   <!--====== Title ======-->
   <title>SIS | Spice Insurance Services</title>
 
