Completing miscellaneous tasks from client email

--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html lang="en">
 
 <head>
-  <!--====== Required meta tags ======-->
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M2BPL7MQEB"></script>
   <script>
@@ -16,6 +10,12 @@
     gtag('js', new Date());
     gtag('config', 'G-M2BPL7MQEB');
   </script>
+
+  <!--====== Required meta tags ======-->
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!--====== Title ======-->
   <title>SIS | Spice Insurance Services</title>
@@ -147,7 +147,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-content">
-            <h2 class="hero">Less risk for your business.<br>More benefits for your employees.</h2>
+            <h2 class="hero" style="text-transform: none;">Less risk for your business.<br>More benefits for your employees.</h2>
             <p>
               Make your business easier and more profitable to run. Find out
               more about how our insurance offerings can elevate your business.
@@ -183,10 +183,8 @@
           <div class="col-12">
             <div class="content">
               <h6>Services</h6>
-              <h2 class="fw-bold">Win-wins for your worksite.</h2>
-              <p>
-                We're a full-service agency specializing exclusively in voluntary, ancillary, and
-                supplemental insurance products known as the "worksite" market.
+              <h2 class="fw-bold">Win-Wins for your worksite.</h2>
+              <p>We are a full-service agency specializing in various insurance products and services. Our emphasis is to provide revenue-minded benefit packages that coordinate with employer-funded and employee-funded programs.
               </p>
             </div>
           </div>
@@ -206,10 +204,7 @@
             </div>
             <div class="service-content">
               <h4>Offer more employee benefits with no additional out-of-pocket expenses</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <p>We are an independent agency which means we don't represent any specific plan or carrier. This means we will shop the best rates and create a specific plan to meet specific needs</p>
             </div>
           </div>
         </div>
@@ -220,10 +215,7 @@
             </div>
             <div class="service-content">
               <h4>Promote employee satisfaction and good will</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <p>Employees can customize benefits to meet unique needs. Employees can purchase benefits for themselves, their spouses, and their children.</p>
             </div>
           </div>
         </div>
@@ -234,10 +226,7 @@
             </div>
             <div class="service-content">
               <h4>Attract and retain your workforce</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <p>Enhanced benefit packages fill gaps for individuals with added needs or high medical deductibles. Giving employees options offers protection against financial hardships. Also, Employees who understand, respect and like their plans are more likely to stay with your company.</p>
             </div>
           </div>
         </div>
@@ -251,10 +240,40 @@
             </div>
             <div class="service-content">
               <h4>Disability insurance</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <p>Short and Long Term Disability.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="single-services">
+            <div class="service-icon">
+              <i class="lni lni-protection"></i>
+            </div>
+            <div class="service-content">
+              <h4>Medical Insurance</h4>
+              <p>We offer fully funded, self-funded and level-funded medical plans.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="single-services">
+            <div class="service-icon">
+              <i class="lni lni-pulse"></i>
+            </div>
+            <div class="service-content">
+              <h4>Critical illness</h4>
+              <p>This helps employees limit out-of-pocket medical expenses and helps protect one's financial security.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="single-services">
+            <div class="service-icon">
+              <i class="lni lni-warning"></i>
+            </div>
+            <div class="service-content">
+              <h4>Accident Insurance</h4>
+              <p>...</p>
             </div>
           </div>
         </div>
@@ -264,29 +283,22 @@
               <i class="lni lni-road"></i>
             </div>
             <div class="service-content">
-              <h4>Full and term life insurance</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <h4>Whole and Term Life Insurance</h4>
+              <p>...</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-unlink"></i>
+              <i class="lni lni-hospital"></i>
             </div>
             <div class="service-content">
-              <h4>Accidental insurance</h4>
-              <p>
-                Lorem ipsum dolor sit amet, adipscing elitr, sed diam nonumy
-                eirmod tempor ividunt labor dolore magna.
-              </p>
+              <h4>Hospital Indemnity Plan</h4>
+              <p>...</p>
             </div>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <!-- ===== service-area end ===== -->
@@ -728,7 +740,7 @@
                   </div>
                   <div class="contact-content">
                     <h4>Contact</h4>
-                    <p>555-555-5555</p>
+                    <p>904-257-1747</p>
                     <p>contact@spiceinsuranceservices.com</p>
                   </div>
                 </div>
@@ -740,7 +752,8 @@
                   </div>
                   <div class="contact-content">
                     <h4>Address</h4>
-                    <p>28 Water St, St. Augustine, FL 32084</p>
+                    <p>619 S. Tree Garden Drive</p>
+                    <p>St Augustine, FL 32086</p>
                     <p>United States</p>
                   </div>
                 </div>
@@ -816,7 +829,7 @@
   <section class="map-section map-style-9">
     <div class="map-container">
       <object style="border:0; height: 500px; width: 100%;"
-        data="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1607.9977178318393!2d-81.3109966436684!3d29.899294356896434!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e427bea6c8ad6f%3A0x4823aa254d78bd6a!2s28%20Water%20St%2C%20St.%20Augustine%2C%20FL%2032084!5e0!3m2!1sen!2sus!4v1664204561080!5m2!1sen!2sus"></object>
+        data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.437509665211!2d-81.3305944!3d29.8516539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e69d483c8d4dbf%3A0x55d189bcef2bb67!2s619%20S%20Tree%20Garden%20Dr%2C%20St.%20Augustine%2C%20FL%2032086!5e0!3m2!1sen!2sus!4v1670983272451!5m2!1sen!2sus"></object>
     </div>
     </div>
   </section>
