--- a/index.html
+++ b/index.html
@@ -738,111 +738,16 @@
 <section id="contact" class="contact-section">
     <div class="container">
         <div class="row">
-            <div class="col-xl-5">
-                <div class="contact-item-wrapper">
-                    <div class="row">
-                        <div class="col-12 col-md-7 col-xl-12">
-                            <div class="contact-item">
-                                <div class="contact-icon">
-                                    <i class="lni lni-phone"></i>
-                                </div>
-                                <div class="contact-content">
-                                    <h4>Contact</h4>
-                                    <p>904-257-1747</p>
-                                    <p>contact@spiceinsuranceservices.com</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-7 col-xl-12">
-                            <div class="contact-item">
-                                <div class="contact-icon">
-                                    <i class="lni lni-map-marker"></i>
-                                </div>
-                                <div class="contact-content">
-                                    <h4>Address</h4>
-                                    <p>619 S. Tree Garden Drive</p>
-                                    <p>St Augustine, FL 32086</p>
-                                    <p>United States</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-7 col-xl-12">
-                            <div class="contact-item">
-                                <div class="contact-icon">
-                                    <i class="lni lni-alarm-clock"></i>
-                                </div>
-                                <div class="contact-content">
-                                    <h4>Schedule</h4>
-                                    <p>Monday – Friday</p>
-                                    <p>9 AM - 5:00 PM</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-7">
-                <div class="contact-form-wrapper">
-                    <div class="row">
-                        <div class="col-xl-10 col-lg-7 mx-auto">
-                            <div class="section-title text-center">
-                                <span> Get in Touch </span>
-                                <h2>Get started today</h2>
-                                <p>
-                                    Call or message our friendly staff right now.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <form action="#" class="contact-form">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <input type="text" name="name" id="name" placeholder="Name" required />
-                            </div>
-                            <div class="col-md-6">
-                                <input type="email" name="email" id="email" placeholder="Email" required />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <input type="text" name="phone" id="phone" placeholder="Phone" required />
-                            </div>
-                            <div class="col-md-6">
-                                <input type="text" name="subject" id="email" placeholder="Subject" required />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <textarea name="message" id="message" placeholder="Type Message" rows="5"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="button text-center rounded-buttons">
-                                    <button type="submit" class="btn primary-btn rounded-full">
-                                        Send Message
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+            <h2 style="text-align: center; font-weight: bold; text-decoration: #e4b822 underline;">Get started today</h2>
+            <p style="text-align: center; padding-top:1rem;">Use the calendar below to pick a time that works best for you.</p>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/kelleah/30-minute-apt" style="min-width:320px;height:650px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Calendly inline widget end -->
         </div>
     </div>
 </section>
 <!-- ========================= contact-section end ========================= -->
-
-<!-- ========================= map-section end ========================= -->
-<section class="map-section map-style-9">
-    <div class="map-container">
-        <object style="border:0; height: 500px; width: 100%;"
-                data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.437509665211!2d-81.3305944!3d29.8516539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e69d483c8d4dbf%3A0x55d189bcef2bb67!2s619%20S%20Tree%20Garden%20Dr%2C%20St.%20Augustine%2C%20FL%2032086!5e0!3m2!1sen!2sus!4v1670983272451!5m2!1sen!2sus"></object>
-    </div>
-    </div>
-</section>
-<!-- ========================= map-section end ========================= -->
-
 <!-- Start Footer Area -->
 <footer class="footer-area footer-eleven">
     <!-- Start Footer Top -->
