--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <div class="header-image">
-                    <img src="assets/images/spice-insurance-services.cropped.jpg" alt="#" />
+                    <img src="assets/images/spice-insurance.professional.1200px.png" alt="#" />
                 </div>
             </div>
         </div>
